objects/Base_Price_Policy__c/Base_Price_Policy__c.object-meta.xml
<CustomObject>
    <label>Base Price Policy</label>
    <nameField>
        <displayFormat>BPP-{0000000}</displayFormat>
        <label>Base Price Policy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Base Price Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>