objects/Base_Price_Policy__c/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>