objects/Base_Price_Policy__c/fields/Created_at__c.field-meta.xml
<CustomField>
    <fullName>Created_at__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created at</label>
    <type>DateTime</type>
</CustomField>