objects/Base_Price_Policy__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>