objects/Base_Price_Policy__c/fields/Updated_at__c.field-meta.xml
<CustomField>
    <fullName>Updated_at__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Updated at</label>
    <type>DateTime</type>
</CustomField>